# zero2prod

./: Cargo.toml  Dockerfile  spec.yaml
migrations/: 20230815064600_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscription.rs
tests/: health_check.rs
