[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13"
actix-web = "4"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate" ] }
uuid = {version = "1.4.1", features = ["v4"]}
chrono = {version = "0.4", default-features = false, features = ["clock"]}
tracing = { version="0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell="1.18"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"
serde-aux = "4"

[dev-dependencies]
reqwest = "0.11"